Teams filter added

--- a/playerService/appsettings.json
+++ b/playerService/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=5432;Database=players;User Id=postgres;Password=admin"
+        "DefaultConnection": "Host=ep-tight-sun-a4elq17q-pooler.us-east-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_dBzTyhKN9U2P;SSL Mode=Require;Trust Server Certificate=true"
     },
     "AllowedHosts": "*"
 }
